@@ -1,11 +1,11 @@
-.TH SMP_REP_MANUFACTURER "8" "January 2008" "smp_utils\-0.93" SMP_UTILS
+.TH SMP_REP_MANUFACTURER "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_rep_manufacturer \- invoke REPORT MANUFACTURER INFORMATION SMP function
 .SH SYNOPSIS
 .B smp_rep_manufacturer
 [\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-interface=PARAMS\fR]
 [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR] [\fI\-\-verbose\fR]
-[\fI\-\-version\fR] \fISMP_DEVICE[,N]\fR
+[\fI\-\-version\fR] [\fI\-\-zero\fR] \fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
@@ -44,15 +44,20 @@ increase the verbosity of the output. Can be used multiple times
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 print the version string and then exit.
+.TP
+\fB\-z\fR, \fB\-\-zero\fR
+zero the Allocated Response Length field in the request. This is required
+for strict SAS\-1.1 compliance. However this option should not be
+given in SAS\-2 and later; if it is given an abridged response may result.
 .SH CONFORMING TO
-The SMP REPORT MANUFACTURER function was introduced in SAS-1, with small
-additions in SAS-1.1 .
+The SMP REPORT MANUFACTURER function was introduced in SAS\-1, with small
+additions in SAS\-1.1 . This function remains unaltered in SAS\-2 and SPL\-1.
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2008 Douglas Gilbert
+Copyright \(co 2006\-2011 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
