@@ -1,4 +1,4 @@
-.TH SMP_REP_PHY_ERR_LOG "8" "December 2008" "smp_utils\-0.94" SMP_UTILS
+.TH SMP_REP_PHY_ERR_LOG "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_rep_phy_err_log \- invoke REPORT PHY ERROR LOG SMP function
 .SH SYNOPSIS
@@ -60,14 +60,14 @@ Similar information may be obtained for SATA device phys (e.g. on a SATA
 disk). If there is a SAT layer between OS and the SATA device then the
 sg_sat_phy_event utility can fetch the information.
 .SH CONFORMING TO
-The SMP REPORT PHY ERROR LOG function was introduced in SAS-1 .
-The "Expander change count" field was added in SAS-2 .
+The SMP REPORT PHY ERROR LOG function was introduced in SAS\-1 .
+The "Expander change count" field was added in SAS\-2 .
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2008 Douglas Gilbert
+Copyright \(co 2006\-2011 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
