@@ -189,7 +189,7 @@ See "Examples" section in http://sg.danny.cz/sg/smp_utils.html
 .SH CONFORMING TO
 To date SAS has three generations. The first two generations are approved
 standards: the original SAS (SAS ANSI INCITS 376-2003) and SAS 1.1 (INCITS
-417-2006). SAS-2 technical work is ongoing and at the time of writing the
+417-2006). SAS\-2 technical work is ongoing and at the time of writing the
 most recent draft is sas2r15.pdf (see section 10.4.3 for SMP functions).
 To avoid confusion, the three generations of SAS will be referred to in
 these man pages as SAS 1, 1.1 and 2 . Drafts, including those just prior to
@@ -207,7 +207,7 @@ The COVERAGE file in the smp_utils source tarball shows the mapping between
 all SMP function names defined in the standards, the versions of those
 standards in which those SMP functions are defined and the corresponding
 smp_utils utility names. A lot of extra SMP functions have been added in
-SAS-2 and many do not have corresponding utilities at this time.
+SAS\-2 and many do not have corresponding utilities at this time.
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
